--- a/App.config
+++ b/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="SLSGAI.Properties.Settings.kiDB_connection" connectionString="Data Source=|DataDirectory|\MyDatabase#1.sdf;Password=abc,.123;Persist Security Info=True"
+            providerName="Microsoft.SqlServerCe.Client.4.0" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
